--- a/.github/workflows/clone-package.yml
+++ b/.github/workflows/clone-package.yml
@@ -42,6 +42,15 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
 
+      - name: fix PKGBUILD
+        shell: bash
+        run: |
+          gitfolder=$(find -type f -name PKGBUILD | sed 's/PKGBUILD//')
+          cd $gitfolder
+          if [ "" ]; then
+            sed "/makedepends=/s/)/ \'python-build\' \'python-wheel\')/" PKGBUILD
+          fi
+
       - name: Update github
         run: |
           git config --local user.email "gitbarnabedikartola@gmail.com"
