--- a/python-colcon-cd/PKGBUILD
+++ b/python-colcon-cd/PKGBUILD
@@ -8,7 +8,7 @@ arch=(any)
 url="https://pypi.org/project/$_name"
 license=('Apache')
 depends=('python-colcon-core')
-makedepends=('python-setuptools' 'flake8' 'python-setuptools' 'python-build' 'python-wheel' 'python-installer')
+makedepends=('python-setuptools' 'flake8')
 source=(
     https://github.com/colcon/colcon-cd/archive/refs/tags/${pkgver}.tar.gz
     https://github.com/myint/scspell/archive/refs/tags/v2.2.tar.gz)
