--- a/.github/workflows/clone-package.yml
+++ b/.github/workflows/clone-package.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           gitfolder=$(find -type f -name PKGBUILD | sed 's/PKGBUILD//')
           cd $gitfolder
-          sed "/makedepends=/s/)/ \'python-build\' \'python-wheel\' \'python-installer\')/" PKGBUILD
+          sed -i "/makedepends=/s/)/ \'python-build\' \'python-wheel\' \'python-installer\')/" PKGBUILD
 
       - name: Update github
         shell: bash
